# holders_list

./: entities.py  format_currency.py  frigies_holders.sqlite3  functions.py  main.py  pyproject.toml
templates/: index.html
