[tool.poetry]
name = "frigiesholders"
version = "0.1.0"
description = ""
authors = ["FanatLuna"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.36"
pandas = "^1.4.2"
requests = "^2.27.1"
schedule = "^1.1.0"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
